--- a/ejemplo3.html
+++ b/ejemplo3.html
@@ -7,6 +7,7 @@
 <h1>Mi Primera Web</h1> <br/>
 <h2 align="center">Bienvenido a mi Web</h2>
 <p>Esta es nuetra tarea numero 3 realizando repositorios</p>
+  <p>edicion desde github </p>
 
-</body>
+  </body>
 </html>
