--- a/ejemplo3.html
+++ b/ejemplo3.html
@@ -8,6 +8,7 @@
 <h2 align="center">Bienvenido a mi Web</h2>
 <p>Esta es nuetra tarea numero 3 realizando repositorios</p>
   <p>edicion desde github </p>
+  <p>párrafo desde nuestro repositorio local</p>
 
   </body>
 </html>
